environments/gloo-core/core/gloo-platform-config/base/active/argocd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
    - "gloo-core-test.solo.io"
  gateways:
    - gloo-mesh-gateways/https-gateway
  http:
    - name: argo-ui
      match:
        - uri:
            prefix: /argo
      route:
        - destination:
            host: argocd-server
            port:
              number: 443
