environments/gloo-core/core/gloo-platform-config/base/active/gmui-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gmui-vs
  namespace: gloo-mesh
spec:
  hosts:
    - "http://gmui.glootest.com/"
  gateways:
    - gloo-mesh-gateways/https-gateway
  http:
    - name: gloo-mesh-ui
      match:
        - uri:
            prefix: /gmui
      route:
        - destination:
            host: gloo-mesh-ui
            port:
              number: 8090
