environments/gloo-core/core/gloo-platform-config/base/active/prometheus-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: gloo-mesh
spec:
  hosts:
    - '*'
  gateways:
    - gloo-mesh-gateways/https-gateway
  http:
    - match:
        - uri:
            prefix: /
      name: prometheus-ui
      route:
        - destination:
            host: prometheus-server
            port:
              number: 80
